@@ -37,11 +37,8 @@ CPU_X86=-march=i586
 endif
 CPUFLAGS=$(CPU_X86)
 
-# Overrides for the default ARCHFLAGS
-#ARCHFLAGS=
-
 CFLAGS += -g -Wall
-CFLAGS += $(CPUFLAGS) $(ARCHFLAGS)
+CFLAGS += $(CPUFLAGS)
 ifndef DEBUG
 CFLAGS += -O2 -DNDEBUG -ffast-math -fexpensive-optimizations
 endif
